Edited niri and waybar configs

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,33 +1,43 @@
-@define-color background #0b0a0d;
-@define-color foreground_black #161514;
-@define-color foreground_white #ffe6ff;
-@define-color button #0b0a0d;
-@define-color focused #ff9eff;
-@define-color occupied #e7d7e7;
-@define-color urgent #ff6e6e;
-
 * {
 	font-family: Hack;
 	font-size: 10pt;
+	border: 0;
 	border-radius: 0px;
+	color: #ffe6ff;
+	padding: 0 0;
+	margin-right: 4px;
+	margin-left: 4px;
+	padding-bottom: 0px;
 }
 
 window#waybar {
-	background: @background;
-	color: @foreground_white;
+	background: rgba (0, 0, 0, 0.45);
 }
 
-#tags button {
-	background: @button;
-	color: @foreground_white;
+#workspaces button {
+	padding: 2px 0px;
+	border-bottom: 2px;
+	border-style: solid;
+	margin-top: 4px;
+	color: #ffe6ff;
+	border-color: #ffe6ff
 }
 
-#tags button.occupied {
-	background: @occupied;
-	color: @foreground_white;
+#workspaces button.active {
+	border-color: #555555
 }
 
-#tags button.focused {
-	background: @focused;
-	color: @foreground_black;
+#workspaces button.focused {
+	border-color: #ff9eff
+}
+
+#network.disconnected {
+	border-color: #ff6e6e
+}
+
+#network, #cpu, #memory, #custom-clock {
+	padding: 0px 3px;
+	border-bottom: 2px;
+	border-color: #ffe6ff;
+	border-style: solid;
 }
