--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -3,7 +3,7 @@
 	font-size: 10pt;
 	border: 0;
 	border-radius: 0px;
-	color: #ffe6ff;
+	color: #161514;
 	padding: 0 0;
 	margin-right: 4px;
 	margin-left: 4px;
@@ -11,33 +11,40 @@
 }
 
 window#waybar {
-	background: rgba (0, 0, 0, 0.45);
+	background: #d8d8d0;
 }
 
 #workspaces button {
-	padding: 2px 0px;
-	border-bottom: 2px;
+	padding: 0px 3px;
+	border-bottom: 4px;
 	border-style: solid;
-	margin-top: 4px;
-	color: #ffe6ff;
-	border-color: #ffe6ff
+	color: #161514;
+	border-color: #161514;
+}
+
+#workspaces button:hover {
+	background: transparent;
+	box-shadow: inherit;
+	text-shadow: inherit;
+	border-top: 0px;
+	margin-top: 0px;
 }
 
 #workspaces button.active {
-	border-color: #555555
+	border-color: #555555;
 }
 
 #workspaces button.focused {
-	border-color: #ff9eff
+	border-color: #ff9eff;
 }
 
 #network.disconnected {
-	border-color: #ff6e6e
+	border-color: #ff6e6e;
 }
 
 #network, #cpu, #memory, #custom-clock {
 	padding: 0px 3px;
-	border-bottom: 2px;
-	border-color: #ffe6ff;
+	border-bottom: 4px;
+	border-color: #161514;
 	border-style: solid;
 }
